--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<version>2.1.15.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>com.men</groupId>
+	<artifactId>miaosha</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
