--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,32 @@
 
+#mybatis
+mybatis.mapperLocations = classpath:generator/*.xml
+mybatis.configuration.map-underscore-to-camel-case =true
+#datasource
+spring.datasource.url=jdbc:mysql://119.45.147.82:3306/miaosha?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=350479.men
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+#druid
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.filters=stat
+spring.datasource.maxActive=2
+spring.datasource.initialSize=1
+spring.datasource.maxWait=60000
+spring.datasource.minIdle=1
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=select 'x'
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxOpenPreparedStatements=20
+#Redis\u6570\u636E\u5E93\u8FDE\u63A5\u914D\u7F6E
+#Redis\u914D\u7F6E
+spring.redis.database=0
+spring.redis.host=119.45.147.82
+spring.redis.port=6379
+spring.redis.password=350479.men
+
+
